<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

<LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/azul"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    tools:context="br.com.provaveisnumeros.ProvaveisNumerosActivity" >

    <TextView
        android:id="@+id/txtFiltros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtro"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radFiltros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <RadioButton
            android:id="@+id/r0Tudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tudo_ate_hoje" />

        <RadioButton
            android:id="@+id/r1Ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/por_ano" />

        <RadioButton
            android:id="@+id/r2Periodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodo" />

        <RadioButton
            android:id="@+id/r3Numeros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concursos" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/lnlAnos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtAnos"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/anos" />

        <Spinner
            android:id="@+id/spiListaAnos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlPeriodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtDataInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_inicio" />

        <Button
            android:id="@+id/btnDataInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="46dp"
            android:minWidth="60dp"
            android:onClick="selecionarData" />

        <TextView
            android:id="@+id/txtDataFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_final" />

        <Button
            android:id="@+id/btnDataFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="46dp"
            android:minWidth="60dp"
            android:onClick="selecionarData" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlConcursos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtConcursoInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_inicio" />

        <EditText
            android:id="@+id/edtConcursoInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtConcursoFim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_final" />

        <EditText
            android:id="@+id/edtConcursoFim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtFrequencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/frequencia"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radFrequencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/r0Mais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/mais_frequentes" />

        <RadioButton
            android:id="@+id/r1Menos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menos_frequentes" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCombinar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClickCombinar"
        android:text="@string/combinar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal|right" >

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="32sp" />

        <ImageButton
            android:id="@+id/imgBtnNovoNumero"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:onClick="onClickNovoResultado"
            android:src="@android:drawable/ic_menu_search"
            android:visibility="invisible" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom" >

        <ProgressBar
            android:id="@+id/prgCarregando"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:maxHeight="24dp"
            android:maxWidth="24dp"
            android:minHeight="24dp"
            android:minWidth="24dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtErro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/prgCarregando" />

    </RelativeLayout>

    
</LinearLayout>
    </ScrollView>